// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Select
  className="Select-big"
  clearable={false}
  isLoading={false}
  labelKey="name"
  noResultsText="no_results"
  onChange={[Function]}
  onInputChange={[Function]}
  optionComponent={[Function]}
  options={Array []}
  placeholder=""
  searchable={true}
  value={
    Object {
      "avatar": "7daf6c79d4802916d83f6266e24850af",
      "login": "admin",
      "name": "Administrator",
    }
  }
  valueComponent={[Function]}
  valueKey="login"
/>
`;

exports[`should render correctly 2`] = `
Array [
  Object {
    "email": "tester@testing.ch",
    "login": "test",
    "name": "Tester",
  },
  Object {
    "email": "foo@bar.ch",
    "login": "foo",
    "name": "Foo Bar",
  },
]
`;

exports[`should render correctly 3`] = `
<Select
  className="Select-big"
  clearable={false}
  isLoading={false}
  labelKey="name"
  noResultsText="no_results"
  onChange={[Function]}
  onInputChange={[Function]}
  optionComponent={[Function]}
  options={
    Array [
      Object {
        "email": "tester@testing.ch",
        "login": "test",
        "name": "Tester",
      },
      Object {
        "email": "foo@bar.ch",
        "login": "foo",
        "name": "Foo Bar",
      },
    ]
  }
  placeholder=""
  searchable={true}
  value={
    Object {
      "avatar": "7daf6c79d4802916d83f6266e24850af",
      "login": "admin",
      "name": "Administrator",
    }
  }
  valueComponent={[Function]}
  valueKey="login"
/>
`;
